--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -20,26 +20,35 @@
               <img src="~/img/reportes.png" alt="...">
             </div>
             <div class="card-body">
-              <h5 class="card-title"><a asp-area="" asp-controller="Listado" asp-action="Reportes">Listado de Envíos</a></h5>
+              <h5 class="card-title"><a asp-area="" asp-controller="Listado" asp-action="Index">Listado de Envíos</a></h5>
               <p class="card-text center" >Visualiza todos los envíos existentes</p>
             </div>
           </div>
         </div>
       </div>
-    </div>
     <div class="row">
-      <div class="col-md-4 d-flex align-items-stretch" data-aos="fade-left"></div>
-        <div class="col-md-4 d-flex align-items-stretch" data-aos="fade-left">
+        <div class="col-md-6 d-flex align-items-stretch" data-aos="fade-right">
           <div class="card">
             <div class="card-img">
               <img src="~/img/reportes.png" alt="...">
             </div>
             <div class="card-body">
-              <h5 class="card-title"><a asp-area="" asp-controller="Listado" asp-action="Reportes">Reportes</a></h5>
-              <p class="card-text center" >Visualiza todos los reportes predichos según los datos recopilados</p>
+              <h5 class="card-title"><a asp-area="" asp-controller="Enrutamiento" asp-action="Index">Enrutamiento</a></h5>
+              <p class="card-text center" >Visualiza el enrutamiento generado según los datos recopilados</p>
             </div>
           </div>
         </div>
-      <div class="col-md-4 d-flex align-items-stretch" data-aos="fade-left"></div>
+       <div class="col-md-6 d-flex align-items-stretch" data-aos="fade-left">
+          <div class="card">
+            <div class="card-img">
+              <img src="~/img/reportes.png" alt="...">
+            </div>
+            <div class="card-body">
+              <h5 class="card-title"><a asp-area="" asp-controller="Usuario" asp-action="Index">Listado de Usuarios</a></h5>
+              <p class="card-text center" >Visualiza y agrega usuarios</p>
+            </div>
+          </div>
+        </div>
   </div>
+    </div>
   </section>
