--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -14,10 +14,7 @@
     <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center">
 
-      <h1 class="logo mr-auto"><img src="~/img/logo.png" alt="..."></h1>
-
-      <a class="get-started-btn " asp-controller="Login" asp-action="Logout">Cerrar Sesión</a>
-
+      <h1 class="logo mr-auto"><a asp-controller="Home" asp-action="Index"><img src="~/img/logo.png" alt="..."></a></h1>
     </div>
   </header>
     <div >
