--- a/Views/Usuario/Index.cshtml
+++ b/Views/Usuario/Index.cshtml
@@ -4,7 +4,8 @@
   }
   <br><br><br><br><br><br>
 <div class="row">
-  <div class="col-lg-6 p-6"  style="text-align: center;">
+  <div class="col-lg-2 p-6"></div>
+  <div class="col-lg-5 p-6"  style="text-align: center;">
     <h2 style="color: black;">Usuarios Registrados</h2>
     <table class="table" >
       <thead>
@@ -38,7 +39,7 @@
     <br>
     <br>
   </div>
-  <div class="col-lg-6 d-flex">
+  <div class="col-lg-3 d-flex"  style="text-align: center;">
              <div class="p-6" >
                  <h1 class="font-weight-bold mb-3" style="color: black;">Completa el formulario de Usuario</h1>
                  <br>
@@ -63,6 +64,7 @@
                 }
              </div>
    </div>
+  <div class="col-lg-2 p-6"></div>
 </div>
 
 <script>
